@startuml

enum user_role {
    ADMIN
    REGISTERED
    GUEST
}

entity conferences {
    +<<pk>> id : int
	---
    +name : string
    +description : string?
    +genre : string?
    +place : string?
    +start_time : datetime
    +end_time : datetime
    +price : float?
    +capacity : int?
}

entity users {
    +<<pk>> id : int
	---
    +name : string
    +email : string
    +role : user_role
    +hashed_password : string
    +is_active : bool = false
    +is_superuser : bool = false
}

entity rooms {
    +<<pk>> id : int
	---
    +name : string
    +capacity : int?
    +conference_id : int
}

entity reservations {
    +<<pk>> id : int
	---
    +number_of_tickets : int
    +status : string?
    +paid : bool
    +user_id : int?
    +conference_id : int
}

entity tickets {
    +<<pk>> id : int
	---
    +created_at : datetime
    +reservation_id : int
}

entity lectures {
    +<<pk>> id : int
	---
    +name : string
    +description : string?
    +start_time : datetime
    +end_time : datetime
    +tags : string?
    +image : string?
    +room_id : int
    +conference_id : int
    +lecturer_id : int
}

entity given_presentation {
    +<<pk>> id : int
	---
    +user_id : int
    +conference_id : int
    +proposal : string?
    +status : string
}

entity voting {
    +<<pk>> id : int
	---
    +user_id : int
    +lecture_id : int
    +rating : int
}

entity questions {
    +<<pk>> id : int
	---
    +text : string
    +user_id : int
    +lecture_id : int
}

conferences ||--o{ rooms
conferences ||--o{ lectures
conferences ||--o{ reservations
conferences ||--o{ given_presentation
users ||--o{ reservations
users ||--o{ lectures
users ||--o{ voting
users ||--o{ questions
users ||--o{ given_presentation
rooms ||--o{ lectures
reservations ||--o{ tickets
lectures ||--o{ voting
lectures ||--o{ questions

@enduml
